fix nav width so nav doesn't horizontally overflow page (#21)
use w = 100% instead of 100vw for nav

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,7 +1,7 @@
 .nav {
     position: absolute;
     top: 0; left: 0;
-    width: 100vw;
+    width: 100%;
     background-color: #20202066;
     font-family: "Montserrat"
 }
